# AceTests

./: .gitignore  README.md  pad  pad.c  pad.c~  theplayer.uaem
3dstarfield/: Makefile  config.status  configure  configure.ac  src.uaem
3dstarfield/src/: 3dstarfield  3dstarfield.c  3dstarfield.h  Makefile  Makefile.am  Makefile.in  game.log.uaem  main.c  memory.log.uaem
3dstarfield/src/.deps/: 3dstarfield.Po  main.Po
ammx/: Makefile  Makefile.in  config.status  configure  configure.ac  vasmm68k_mot_os3.lha
ammx2drotations/: Makefile  Makefile.in  config.status  configure  configure.ac
ammx2drotations/src/: Dirty_Tricks.lsbank  Dirty_Tricks.lsmusic  Makefile  Makefile.am  Makefile.in  ammx2drotations  ammx2drotations.c  ammx2drotations.h  ammxasm.s  insane.asm  main.c
ammx2drotations/src/.deps/: ammx2drotations.Po  main.Po
ammx2drotations/src/aprocessing/: trigtables.i
ammx2drotations/src/aprocessing/matrix/: matrix.s  scale.s
ammx2drotations/src/aprocessing/rasterizers/: globaloptions.s  point.s  processing_bitplanes_fast.s  processingclearfunctions.s  processingfill.s  triangle.s  triangle3d.s
ammxline/: Makefile  config.status  configure  configure.ac
ammxmatrix/: Makefile  config.status  configure  configure.ac
copbarmoving/: Makefile  README  config.status  configure  configure.ac
curtains/: Makefile  Makefile.in  config.status  configure  configure.ac
deletepartimage/: Makefile  config.status  configure  configure.ac
deletepartimage/src/: Makefile  Makefile.am  Makefile.in  deletepartimage  deletepartimage.c  deletepartimage.h  drawline_ptr_linkable.s  main.c  test.bmp.uaem
deletepartimage/src/.deps/: deletepartimage.Po  main.Po
fiocco/: Makefile  config.status  configure  configure.ac
fiocco/src/: Makefile  Makefile.am  Makefile.in  acedraw.h  customtrigonometry.h  fiocco  fiocco.c  fiocco.h  main.c
fiocco/src/.deps/: fiocco.Po  main.Po
flashimage/: Makefile  config.status  configure  configure.ac  src.uaem
goatblocks/: Makefile  config.status  configure  configure.ac
goatlight/: Makefile  config.status  configure  configure.ac  src.uaem
goatlighttext/: Makefile  config.status  configure  configure.ac  src.uaem
goatlighttext/src/: Makefile  Makefile.am  bitplanes.raw.uaem  game.log.uaem  goatlight  goatlight.c  main.h  music_ptr_linkable.s  singlebitplanes.rawaa  singlebitplanes.rawab  singlebitplanes.rawad  stripped.raw
goatlighttext/src/.deps/: goatlight.Po  main.Po  physics.Po  sprites.Po
memtest/: Makefile  Makefile.in  config.status  configure  configure.ac
metaballschunky/: Makefile  configure.ac  src.uaem
metaballschunky16/: Makefile  config.status  configure  src.uaem
metaballschunky8/: Makefile  (+4 more)
metaballschunky8/src/: Makefile  Makefile.am  Makefile.in  main.c  memory.log.uaem  metaballschunky8  metaballschunky8.c  metaballschunky8.h
metaballschunky8/src/.deps/: main.Po  metaballschunky8.Po
(+1575 files in other folders)
